--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,20 @@
-.content .p-card {
-  background-color: white !important;
+
+.header_content {
+  margin: 40px 25%;
+  padding : 15px;
+  background-color : white;
+  text-align: center;
+  width : 15%;
+}
+
+
+.content {
+  margin-left: 25%;
+}
+
+.box_content {
+  padding : 15px;
+  background-color : white;
+  text-align: center;
+  width : 15%;
 }
